Paper - drafting initiated

--- a/document.tex
+++ b/document.tex
@@ -122,72 +122,12 @@ tabsize=2, % Number of spaces per tab in the code
   \input{tex/02_introduction.tex}
 
 
-  % \newpage
-  % \input{tex/03_body_section1.tex}
+  \newpage
+  \input{tex/03_body_section_01.tex}
   
-  
-  % \newpage
-  % \input{tex/03_body_section2.tex}
-  
-  
-  % \newpage
-  % \input{tex/03_body_section3.tex}
-  
-
-  % \newpage
-  % \input{tex/03_body_section4.tex}
-  
-
-  % \newpage
-  % \input{tex/03_body_section5.tex}
-
-  
-  % \newpage
-  % \input{tex/03_body_section6.tex}
-
-
-  % \newpage
-  % \input{tex/03_body_section7.tex}
-
-
-  % \newpage
-  % \input{tex/03_body_section8.tex}
-
-
-  % \newpage
-  % \input{tex/03_body_section9.tex}
-
-
-  % \newpage
-  % \input{tex/03_body_section9_db_design_summary.tex}
-
-
-  % \newpage
-  % \input{tex/03_body_section10.tex}
-
-
-  % \newpage
-  % \input{tex/03_body_section11.tex}
-
-
-  % \newpage
-  % \input{tex/03_body_section12.tex}
-
-
-  % \newpage
-  % \input{tex/03_body_section13.tex}
-
-
-  % \newpage
-  % \input{tex/03_body_section14.tex}
-
-
-  % \newpage
-  % \input{tex/03_body_section15.tex}
-
 
   \newpage
-  \input{tex/04_body_conclusion.tex}
+  \input{tex/04_conclusion.tex}
 
 
   \newpage
