--- a/tex/02_introduction.tex
+++ b/tex/02_introduction.tex
@@ -1,43 +1,21 @@
 \section{Introduction}
 
-{\huge{Course: UC1PR2101 Programming and Databases}}
+{\huge{Subject: UC1ST1103 - Studio 1}}
 
-S02-PR2-2020
+\subsection{Document Information}
 
-\subsection{Key dates}
+% \begin{tabular}{r @{ } c}
+\begin{tabular}{r|l p{20mm} p{40mm}}
+    Studio1 project deliverable: & Analysis of individual criteria \\
+    Topic/Subject of analysis: & Critical Infrastructure Maturity\\
+    Word count: & {\color{red}{N/A}}\\
+    Pages: & \pageref{LastPage} \\
 
-\begin{tabular}{r @{} c}
-    Duration: & 6 weeks\\
-    Start: & 2021-01-04\\
-    End: & 2021-02-15\\
-    Formative assessment: & TBD\\
-    Assessment 1 - Submission date: & TBD\\
-    Assessment 2 - Submission date: & TBD\\
 \end{tabular}
 
-\subsection{Course Tutors}
+\subsection{Course Lecturers}
 
 \begin{tabular}{r @{} l}
-    Course leader: & Johan Van Niekerk\\
-    Course lecturer: & Rayne Reid\\
-    Course tutor: & Konstantin Lenchik\\
-    course tutor: & Mariya Chirchenkova\\
-    Support tutor: & Sohail Naseem (KRS)\\
-    Support tutor: & Arash Mithraian (OSL)\\
+    Course leader: & Prof. Mariya Chirchenkova\\
+    Course lecturer: & Prof. Rayne Reid\\
 \end{tabular}
-
-\subsubsection{Study goals}
-
-\begin{itemize}
-    \item Working with database (SQLite)
-        \begin{itemize}
-            \item Acquire fundamental skill about working with databases
-            \item How to design as simple normalized database
-            \item Understand database storage and data structure
-            \item Understand database Normalization
-            \item Be able to query and interface with databases
-            \item How to script and automate database connection, mangagement and datamining
-            \item Automate data manipulation and analysis, generating reports and statitics etc on data in databases, dataframes etc.
-            \item Understanding and being able to manage and  work with databases is therefore key to the field of CyberSecurity.
-        \end{itemize}
-\end{itemize}
