--- a/tex/01_title.tex
+++ b/tex/01_title.tex
@@ -2,13 +2,16 @@
   \begin{center}
 
 
-      {\bfseries{\Huge{Reflective Journal}}}
+      {\bfseries{\Huge{Deliverable: Analysis of Individual Criteria}}}
+
+    
+      {\bfseries{\LARGE{IT Infrastructure Maturity}}}
 
 
       {\Large{by}}
 
     \begin{author}
-      \author{\Large{Dale Peregrino Bada}}
+      \author{\Large{Dale P. Bada}}
     \end{author}
 
 
@@ -17,7 +20,7 @@
 
 
     \begin{title}
-        \title{\bfseries{\huge{UC1PR2101 Programming and Databases}}}
+        \title{\bfseries{\huge{UC1ST1103 - Studio 1}}}
     \end{title}
 
     \vspace*{2.5cm}
