--- a/tex/02_introduction.tex
+++ b/tex/02_introduction.tex
@@ -4,18 +4,85 @@
 
 \subsection{Document Information}
 
+\begin{table}[h]
 % \begin{tabular}{r @{ } c}
-\begin{tabular}{r|l p{20mm} p{40mm}}
-    Studio1 project deliverable: & Analysis of individual criteria \\
-    Topic/Subject of analysis: & Critical Infrastructure Maturity\\
-    Word count: & {\color{red}{N/A}}\\
-    Pages: & \pageref{LastPage} \\
+    \renewcommand{\arraystretch}{2}
+    \begin{tabular}{r|l}
+        Studio1 project deliverable: & Analysis of individual criteria \\
+        Topic/Subject of analysis: & Critical Infrastructure Maturity\\
+        Word count: & {\color{red}{N/A}}\\
+        Estimated read time: & {\color{red}{HH:MM}} \\
+        Pages: & \pageref{LastPage} \\
+    \end{tabular}
+    \renewcommand{\arraystretch}{1}
+    
+    \subsection{Course Lecturers}
+    
+    \renewcommand{\arraystretch}{2}
+    % \begin{tabular}{r|lp{70mm}}
+    \begin{tabular}{r|l}
+        Course leader: & Prof. Mariya Chirchenkova Prof \\
+        Course lecturer: & Prof. Rayne Reid \\
+    \end{tabular}
+    \renewcommand{\arraystretch}{1}
+        
+\end{table}
 
-\end{tabular}
+\subsection{Subject Matter}
 
-\subsection{Course Lecturers}
+This paper is an analysis of Norways Cyber Security posture. We will delve into; What is Cyber Security? How Cyber Security affects a nations, any nation and its citizens? Examine the challenges of most imminent import. And assess what lies further in the foreseable future? From the perpective Norways national Cyber Securities interest?
 
-\begin{tabular}{r @{} l}
-    Course leader: & Prof. Mariya Chirchenkova\\
-    Course lecturer: & Prof. Rayne Reid\\
-\end{tabular}
+The latter part of the paper is a comparrable analysis of Norways National Cyber Security Strategy with its peers within the European Union. The basis of comparrison will focus on a selection of strategic imperatives as outlined by ENISA \footnote{European Union Agency for Cybersecurity}, in their {\emph{}{"NCSS"}}\footnote{National Cyber Security Strategy} Good Practice Guideline.
+
+One focus area is on the analysis involving "Critical Information Infrastruture"; the underlying systems which provides services that everyone relies on, on a daily basis. Heed the previous statement as indication to how broad and vast the topic is. Therefore the necessetity to constraint on 2 specific area or industries.
+
+Cyber Security concerning:
+\begin{itemize}
+    \item The financial industry
+    \item The telecommunication industry
+\end{itemize}
+
+The countries subject to analysis and comparison are:
+\begin{itemize}
+    \item Norway
+    \item Sweden
+    \item Denmark
+    \item Finland
+    \item Iceland
+    \item United Kingdom
+    \item Russia
+    \item France
+    \item The Netherlands
+    \item Bulgaria
+\end{itemize}
+
+The countries are selected on the basis of:
+\begin{itemize}
+    \item Geographical vicinity
+    \item Similarities and/or contrastring traits in:
+    \begin{itemize}
+        \item IT infrastructure maturity
+        \item IT services utilization
+        \item Culture
+        \item Geopolitical profile
+        \item (Assumed) Cyber Security posture
+        \item Compliance level (according to ENISA's NCSS Good Practice)
+    \end{itemize}
+\end{itemize}
+
+\subsection{Exclusions}
+
+The exact definition of what entails "Critical Information Infrastruture" is a fundamental necessetity to have established. It is therefore throughly outlined in the guidelines and directves used as source materials this analysis is based on.
+
+This paper follows the source materials' definitons of {\emph{}{"cyber security"}}, financial industry and telecommunication industry. Other industries and security concerns may be mentioned, but not be the focus of the analysis.
+
+Other countries, than the 10 listed above, maybe mentioned or referenced, but are otherwise not the focus of the analysis and comparison.
+
+\subsection{Circle of trust}
+
+Security, either physical or on the internat, is ultimately about establishing, balancing and managing a "Circle of trust".
+
+There is no 1 solution that can be implemented and enfoced to 100\% secure any physical or digital entity.
+
+There will always be a trade-off in terms of accepted risk, exposure, convenience and accessibility. And limitations to address in terms of human skill, time, IT resources and funding. Just to name a few.
+
