Section 1 redone, Section 2 draft in progress

--- a/tex/02_introduction.tex
+++ b/tex/02_introduction.tex
@@ -30,7 +30,7 @@
 
 \subsection{Subject Matter}
 
-This paper is an analysis of Norways Cyber Security posture. We will delve into; What is Cyber Security? How Cyber Security affects a nations, any nation and its citizens? Examine the challenges of most imminent import. And assess what lies further in the foreseable future? From the perpective Norways national Cyber Securities interest?
+This paper is an analysis of Norways Cyber Security posture. We will delve into; "How Cyber Security addressed in the area of Critical Information Infrastructure from policy and legislative standpoint". How Cyber Security affects a nations, any nation, and its citizens? We will examine the challenges of most imminent import. And assess what lies further in the foreseable future. We will address the above topics From the perpective Norways national Cyber Securities interest.
 
 The latter part of the paper is a comparrable analysis of Norways National Cyber Security Strategy with its peers within the European Union. The basis of comparrison will focus on a selection of strategic imperatives as outlined by ENISA \footnote{European Union Agency for Cybersecurity}, in their {\emph{}{"NCSS"}}\footnote{National Cyber Security Strategy} Good Practice Guideline.
 
@@ -78,11 +78,14 @@ This paper follows the source materials' definitons of {\emph{}{"cyber security"
 
 Other countries, than the 10 listed above, maybe mentioned or referenced, but are otherwise not the focus of the analysis and comparison.
 
+Details regarding the policies and legistations relevant to Critical Information Infrastructure and the Financial sector will be referenced. The full detail will not be outlined in this document.
+
 \subsection{Circle of trust}
 
-Security, either physical or on the internat, is ultimately about establishing, balancing and managing a "Circle of trust".
+There is no 1 solution that can be implemented and enfoced to attain a 100\% secure any physical or digital entity. Information Security requires many layers of cleverly designed technical solutions and implementations. Be it a preventive or a more offensive counter measure.
 
-There is no 1 solution that can be implemented and enfoced to 100\% secure any physical or digital entity.
+However, an important, but often neglected part of Information security are the non physical and non technical layers and aspects of information security. These are the overarching best-practices, standards and legislations that impacts, and many cases sets precedence over, the technical solutions.
 
 There will always be a trade-off in terms of accepted risk, exposure, convenience and accessibility. And limitations to address in terms of human skill, time, IT resources and funding. Just to name a few.
 
+In this paper, we will examine how a Norway and other European Unions states approaches the issue of information secruirty from policy and legislative point of view. It will also discuss how to improve current standings of current policy and delve into some technical solutions that may help reach the policy objectives.
