--- a/mystyle.sty
+++ b/mystyle.sty
@@ -17,6 +17,11 @@
 \usepackage[style=apa]{biblatex} % The best typesetting implementation of APA that works with the rest of the other packages used in this style file.
 \addbibresource{tex/MyCollection.bib} % Test bib file. used as example
 
+% package for index and glossary
+\usepackage{imakeidx}
+\usepackage{glossaries}
+% \usepackage[acronym]{glossaries}
+
 % packages for typesetting source-code
 \usepackage{listings} % Required for inserting code snippets
 % \usepackage[usenames,dvipsnames]{xcolor} % Required for specifying custom colors and referring to colors by name !!! DO NOT USE THIS
