--- a/document.tex
+++ b/document.tex
@@ -95,6 +95,8 @@ tabsize=2, % Number of spaces per tab in the code
 % Create a command to cleanly insert a snippet with the style above anywhere in the document
 \newcommand{\insertcode}[2]{\begin{itemize}\item[]\lstinputlisting[caption=#2,label=#1,style=Style1]{#1}\end{itemize}} % The first argument is the script location/filename and the second is a caption for the listing
 
+\makeglossaries
+\input{tex/glossary.tex}
 
 \pagenumbering{roman}
 
@@ -141,5 +143,13 @@ tabsize=2, % Number of spaces per tab in the code
 
   \section{Bibliography}
   \printbibliography
+
+
+  \clearpage
+
+  % \printglossary[title=Terms Used, toctitle=List of Terms]
+  \printglossary
+  % \printglossary[type=\acronymtype]
+
 
 \end{document}
