--- a/tex/03_body_section_01.tex
+++ b/tex/03_body_section_01.tex
@@ -1,7 +1,7 @@
 
-\section{What accouts for a successful Cyber Security Strategy?}
+\section{What accounts for a successful Cyber Security Strategy?}
 
-There are many components, layers and moving parts that needs to be addressed for a successul implementations of a Information and Cyber Security.
+There are many components, layers and moving parts that needs to be addressed for a successul implementations of a National Information and Cyber Security Strategy.
 
 \begin{itemize}
     \item International standards and policies
@@ -14,15 +14,17 @@ There are many components, layers and moving parts that needs to be addressed fo
     \item Utilization solutions and enforment of policies
 \end{itemize}
 
-Information and Cyber Security is, as with any complex and interconnected systems, only as strong as its weakest link. Requiring all of the components listed above to be designed, implemented and function seemlessly together in order to have a solid baseline\footnote[1]{With the emphasis on "baseline", as a 100\% security cannot be achived without implications to other aspects such as usability, interoperability and efficiency. There are trade-offs and comprimises at all levels.} for digital and information security. At the very top, and in many cases the starting point of all consequtive items in the list, are the standards and policies. A piece of paper, a signed law that starts it all, and mandates action to be taken.
+Information and Cyber Security is, as with any complex and interconnected systems, only as strong as its weakest link. Requiring all of the components, or layers, listed above to be designed, implemented and function seemlessly together in order to have a solid baseline\footnote[1]{With the emphasis on "baseline", as a 100\% security cannot be achived without implications to other aspects such as usability, interoperability and efficiency. There are trade-offs and comprimises at all levels.} for a National Information and Cyber Security Strategy.
 
-To understand current objectives and standings of Norways Cyber Security Strategy, and its couterparts in the European Union, we need to understand the history behind it. The challenges and events that promted for such a strategy. The stakeholders involved, and the policies and regulation derived from the inital effort.
+At the very top, and in many cases the starting point of all consequtive items in the list, are the standards and policies defined by the European Union and its individual Member States. A piece of paper, a signed law that starts it all, and mandates action to be taken.
 
-After tracing back initiative's history and understanding its requirements and objectives. We will be able to understand strategy's current form and the policies derived from it. And the agencies and organizations that was established to implement, monitor and enfoce the strategies. Basically the; who, when, why and how.
+To understand current objectives and standings of Norways Cyber Security Strategy, and its couterparts in the European Union, we need to understand the history behind the strategies itself. The challenges and events that promted for such a strategy. The stakeholders involved, and the policies and regulation derived from the inital effort.
+
+After tracing back the initiative's history and understanding its requirements and objectives. We will be able to understand strategy's current form, the policies derived from it. And the agencies and organizations that was established to implement, monitor and enfoce the strategies. Basically the; who, when, why and how.
 
 \subsection{The European Union's NIS Directive and its Annex}
 
-On the 6th of July 2016, the European Union has approved and signed off on \acrfull{nis}. It is a legislation affecting all European Union member states, and its trading partners in the \Gls{ESM} \footnote[2]{\url{https://en.wikipedia.org/wiki/European_Single_Market for moredetails}}. All EU member states are mandated to "tranpose", or incorporate the directive into their National legislations by 9th of May 2018. In the 2nd of October 2020, a review of the Directive has been conducted, and a revised NIS has been presented to the European Comission on 6th of December 2020.
+On the 6th of July 2016, the European Union \footnote[2]{more specifically: the European Comission proposes a Directive, a bill of law, and the EU Council and thhe EU Parliament deliberates and votes if the new Directive or bill will pass, be approved.} has approved and signed off on \acrfull{nis}. It is a legislation affecting all European Union member states, and its trading partners in the \Gls{ESM} \footnote[2]{\url{https://en.wikipedia.org/wiki/European_Single_Market for moredetails}}. All EU member states are mandated to "tranpose", or incorporate the directive into their National legislations by 9th of May 2018. In the 2nd of October 2020, a review of the Directive has been conducted, and a revised NIS has been presented to the European Comission on 6th of December 2020.
 
 The Directive has 3 annex documents. The annexies provides more context and clarity to the Directive.
 
@@ -109,7 +111,7 @@ There certain requirements described in the NIS that every member states must co
 
 \subsection{The Norwegian National Cyber Security Strategy}
 
-Norways approach to its \acrshort{ncss} is largely in compliance with the NIS Directive. Although Norway is not directly mandated to adher to the NIS Directive, aligning and being compliant with EU's regulations and policies is both sensible and benefitial. 
+Norways approach to its \acrshort{ncss} is largely in compliance with the NIS Directive. Although Norway is not directly mandated to adhere to the NIS Directive, aligning and being compliant with EU's regulations and policies is both sensible and benefitial. 
 
 Finance sector regulations, Communications and Privacy laws are a couple of example that benefits Norway by allowing for free movement of goods, persons, services and capital with other\acrshort{eea} Member States. Compliance and with the mentioned laws and regulation makes it much simplier by implmenting \acrshort{ncss} in accordance with the NIS directive.
 
